--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    
     <div class="app">
         <div class=container>
             <canvas></canvas>
-            <!-- <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"></svg> -->
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"></svg>
         </div>
         <div class="options">
             
