Use Path2D to optimize performance and mentainence

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <div>
                 <span>expression:</span>
-                <input id=expr type="text" value="tan(x)"> </br>
+                <input id=expr type="text" value="sin(x)"> </br>
             </div>
     
             <div>
