Fix errors appeared in linux & firefox, refactor some code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <div class="app">
         <div class=container>
-            <canvas class="elmCanvas"></canvas>
+            <canvas id="canvas"></canvas>
         </div>
         <div class="options">
             
